bk_ida/gccida/g3/extract_insn
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/recog.c:2553:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/recog.c:2563:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v2 = ( __int16 *)insn[2]; 
                 ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/recog.c:2564:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.n_alternatives = 0; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/recog.c:2565:13: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
*( _WORD *)&recog_data_0.n_operands = 0; 
            ^~~~~~~~~~~~
            recog_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/recog.c:2567:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.insn = 0LL; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/recog.c:2573:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v18.rtwint = ( __int64)v17->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/recog.c:2584:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.n_operands = n_operands; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/recog.c:2586:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "recog.c", 2139, "extract_insn"); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/recog.c:2586:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "recog.c", 2139, "extract_insn"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/recog.c:2591:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand, 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/recog.c:2592:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand_loc, 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/recog.c:2593:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.constraints, 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/recog.c:2594:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand_mode); 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/recog.c:2597:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v19 = recog_data_0.constraints[0]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/recog.c:2598:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.n_alternatives = 1; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/recog.c:2600:12: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( i = *recog_data_0.constraints[0]; *v19; i = *v19 ) 
           ^~~~~~~~~~~~
           recog_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/recog.c:2604:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.n_alternatives = v13; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/recog.c:2609:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.n_alternatives <= 30 ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/recog.c:2621:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "recog.c", 2148, "extract_insn"); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_insn/src/obj/recog.o] Error 1
